manifests/ocm-description-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ocm-description-service
  name: ocm-description-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocm-description-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ocm-description-service
    spec:
      serviceAccountName: manifestwork-editor-service-account
      automountServiceAccountToken: true
      containers:
      - name: ocm-description-service
        image: registry.atosresearch.eu:18509/orch-agent-ocm-description-svc:dev
        imagePullPolicy: Always 
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: nexusetsnsecret
status: {}
