manifests/ocm-description-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orch-agent-service
  name: orch-agent-service
  namespace: default
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: orch-agent-service
  type: ClusterIP
status:
  loadBalancer: {}
