manifests/ocm-description-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  name: icos-ocm-description
  namespace: agones-system
spec:
  ingressClassName: traefik
  rules:
    - host: k3s.bull1.ari-imet.eu
      http:
         paths:
           - backend:
               service:
                 name: ocm-description-service
                 port:
                   number: 8083
             path: /ocm-description
             pathType: Prefix
  tls:
    - hosts:
        - k3s.bull1.ari-imet.eu
      secretName: k3s-bull1-secret
